--- a/js/exercicios/exercicio-6/style.css
+++ b/js/exercicios/exercicio-6/style.css
@@ -36,8 +36,9 @@ header {
   text-align: center;
 }
 
-h1 {
-  font-size: 2em;
+h2 {
+  font-size: 1.5em;
+  color: #333;
 }
 
 .section {
@@ -48,29 +49,16 @@ h1 {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
-  font-size: 1.5em;
-  color: #333;
-}
-
 p,
 ul {
   font-size: 1.2em;
   color: #333;
 }
 
-ul {
-  list-style: disc inside;
-}
-
 .code {
   background-color: #e8e8e8;
   padding: 15px;
   border-radius: 5px;
+  overflow-x: auto;
   font-family: "Courier New", monospace;
-}
-
-pre {
-  margin: 0;
-  font-size: 1.1em;
 }
