--- a/style.css
+++ b/style.css
@@ -1,7 +1,103 @@
-a {
-  color:#000;
-  text-decoration: none;
+/* Reset básico */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-a:hover {
-    text-decoration: underline;
+
+/* Estilo do body */
+body {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  background-color: #f4f4f4;
+  color: #333;
+}
+html {
+  scroll-behavior: smooth;
+}
+/* Estilo do header */
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: #333;
+  color: white;
+  padding: 20px 0;
+}
+
+.div_header{
+  align-items: center;
+  
+}
+#search {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  margin-left: auto;
+  color: #333;
+}
+
+/* Estilo dos links do nav */
+.link_footer,
+.link_header {
+  color: #fff;
+  text-decoration: none;
+  padding: 0 10px;
+  transition: color 0.3s ease;
+}
+
+nav a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  padding: 0 15px;
+  transition: color 0.3s ease;
+}
+
+.link_footer:hover,
+nav a:hover {
+  text-decoration: underline;
+  color: #007bff;
+}
+
+/* Estilo do main */
+main {
+  padding: 20px;
+}
+
+/* Estilo dos títulos */
+h1 {
+  font-size: 2.5em;
+  margin-bottom: 10px;
+}
+
+h2 {
+  font-size: 1.8em;
+  color: #333;
+  margin-top: 20px;
+}
+
+h3 {
+  font-size: 1.4em;
+  margin-top: 15px;
+}
+
+/* Estilo das listas */
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+ul li {
+  margin-bottom: 10px;
+}
+
+footer {
+  background-color: #333;
+  color: white;
+  padding: 10px 0;
+  text-align: center;
 }
