feat: Exercise 14 Geometric Calculator has been added, refactor: Changes have been made to the organization of the folders

--- a/js/exercicios/exercicio-13/style.css
+++ b/js/exercicios/exercicio-13/style.css
@@ -49,9 +49,14 @@ h2 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-p {
+p,
+ul {
     font-size: 1.2em;
     color: #333;
+}
+
+ul {
+    list-style: disc inside;
 }
 
 .code {
@@ -59,4 +64,5 @@ p {
     padding: 15px;
     border-radius: 5px;
     font-family: "Courier New", monospace;
+    overflow-x: auto;
 }
