--- a/js/exercicios/exercicio-14/style.css
+++ b/js/exercicios/exercicio-14/style.css
@@ -10,7 +10,6 @@
   margin-top: 1rem;
   text-transform: none;
   font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
 }
@@ -58,9 +57,11 @@ ul {
 ul {
   list-style: disc inside;
 }
+
 .code {
   background-color: #e8e8e8;
   padding: 15px;
   border-radius: 5px;
   font-family: "Courier New", monospace;
+  overflow-x: auto;
 }
