--- a/js/estruturas-de-dados/style.css
+++ b/js/estruturas-de-dados/style.css
@@ -74,3 +74,46 @@ pre {
   margin: 0;
   font-size: 1.1em;
 }
+
+
+.p_footer {
+  color: #fff;
+}
+.link_git {
+  color: #fff;
+  text-decoration: none;
+  padding: 0 10px;
+  transition: color 0.3s ease;
+}
+.link_git:hover {
+  text-decoration: underline;
+  color: #007bff;
+}
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+  font-family: monospace;
+}
+
+.p_footer {
+  color: #fff;
+}
+.link_git {
+  color: #fff;
+  text-decoration: none;
+  padding: 0 10px;
+  transition: color 0.3s ease;
+}
+.link_git:hover {
+  text-decoration: underline;
+  color: #007bff;
+}
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+  font-family: monospace;
+}
