--- a/js/exercicios/exercicio-14/style.css
+++ b/js/exercicios/exercicio-14/style.css
@@ -14,6 +14,7 @@
   font-style: normal;
 }
 
+
 .nav_pages:hover {
   color: #000000;
   transition: background-color 0.5s ease, border-color 0.5s ease;
@@ -64,4 +65,26 @@ ul {
   border-radius: 5px;
   font-family: "Courier New", monospace;
   overflow-x: auto;
+}
+
+
+.p_footer {
+  color: #fff;
+}
+.link_git {
+  color: #fff;
+  text-decoration: none;
+  padding: 0 10px;
+  transition: color 0.3s ease;
+}
+.link_git:hover {
+  text-decoration: underline;
+  color: #007bff;
+}
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+  font-family: monospace;
 }
