--- a/js/variaveis/style.css
+++ b/js/variaveis/style.css
@@ -1,64 +1,85 @@
+.nav_pages {
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #007900;
+  border: solid 3px #f64343;
+  border-radius: 10px;
+  padding: 5px 15px;
+  display: inline-block;
+  margin-left: 1rem;
+  margin-top: 1rem;
+  text-transform: none;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 
-      .nav_pages {
-        text-decoration: none;
-        color: #ffffff;
-        background-color: #007900;
-        border: solid 3px #f64343;
-        border-radius: 10px;
-        padding: 5px 15px;
-        display: inline-block;
-        margin-left: 1rem;
-        margin-top: 1rem;
-        text-transform: none;
-        font-family: "Montserrat", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: 400;
-        font-style: normal;
-      }
+.nav_pages:hover {
+  color: #000000;
+  transition: background-color 0.5s ease, border-color 0.5s ease;
+  background-color: #00ff04;
+  border: #007900 solid 3px;
+}
 
-      .nav_pages:hover {
-        color: #000000;
-        transition: background-color 0.5s ease, border-color 0.5s ease;
-        background-color: #00ff04;
-        border: #007900 solid 3px;
-      }
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+}
 
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-      }
+header {
+  background-color: #333;
+  color: white;
+  padding: 10px 0;
+  text-align: center;
+}
 
-      header {
-        background-color: #333;
-        color: white;
-        padding: 10px 0;
-        text-align: center;
-      }
+h1 {
+  font-size: 2em;
+}
 
-      h1 {
-        font-size: 2em;
-      }
+.section {
+  margin: 20px;
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
-      .section {
-        margin: 20px;
-        padding: 20px;
-        background-color: #ffffff;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
+h2 {
+  font-size: 1.5em;
+  color: #333;
+}
 
-      h2 {
-        font-size: 1.5em;
-        color: #333;
-      }
+p,
+ul {
+  font-size: 1.2em;
+  color: #333;
+}
 
-      p, ul {
-        font-size: 1.2em;
-        color: #333;
-      }
+ul {
+  list-style: disc inside;
+}
 
-      ul {
-        list-style: disc inside;
-      }
+.p_footer {
+  color: #fff;
+}
+.link_git {
+  color: #fff;
+  text-decoration: none;
+  padding: 0 10px;
+  transition: color 0.3s ease;
+}
+.link_git:hover {
+  text-decoration: underline;
+  color: #007bff;
+}
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+  font-family: monospace;
+}
